Make precompiled dalvik opt-in instead of opt-out
the address alignment issues that break skia in SkCanvas::drawRectCoords are a dealbreaker.

Set FORCE_PRECOMPILED_DALVIK to *anything* to play with the files, or to include them so that you can investigate and fix the issue.

Change-Id: Id07adc9b4c741a7916cab3705c92c9daaeca4e10

Conflicts:
	core/Makefile

--- a/core/Makefile
+++ b/core/Makefile
@@ -1409,7 +1409,12 @@ ifneq ($(TARGET_CUSTOM_RELEASETOOL),)
         @echo "Running releasetool"
         $(hide) $(TARGET_CUSTOM_RELEASETOOL)
 else
+	@echo -e ${CL_YLW}"Running releasetool..."${CL_RST}
+ ifeq ($(strip $(FORCE_PRECOMPILED_DALVIK)),)
 	$(hide) ./vendor/romfactory/tools/squisher
+ else
+	$(hide) ./vendor/romfactory/tools/squisher $(TARGET_BOARD_PLATFORM)
+ endif
 endif
 
 # -----------------------------------------------------------------
